lab/k8s/duckdns/3-Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: duckdns
  labels:
    app: duckdns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: duckdns
  template:
    metadata:
      labels:
        app: duckdns
    spec:
      containers:
      - name: duckdns
        image: ghcr.io/linuxserver/duckdns
        ports:
        - containerPort: 53
        resources: {}
        volumeMounts:
        - mountPath: /config
          name: duckdns-data
      restartPolicy: OnFailure
      volumes:
      - name: rstudio
        persistentVolumeClaim:
          claimName: rstudio-data
