lab/k8s/duckdns/4-Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: duckdns
spec:
  selector:
    app: duckdns
  ports:
    - port: 53
      targetPort: 53
  type: ClusterIP
